--- a/blog-management/src/style.css
+++ b/blog-management/src/style.css
@@ -1,126 +1,18 @@
 body{
-    /* background-color: red; */
     text-align: center;
     margin: auto;
+    font-family: "Montserrat",sans-serif;
 }
 
 .heading{
-    font-family: "Montserrat",sans-serif;
+    font-family: "Dancing Script",sans-serif;
     font-size:30px;
     color: #22577A;
 }
-.blogDisplay{
-    width: 300px;
-    border: 0.5px;
-    border: solid;
-    float: left;
-    padding: 5%;
-    margin: 10px;
-    height: 100px;
-    
-}
-.postInfo{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-}
-.postTitle{
-    font-family: "Montserrat",sans-serif;
-    font-size:24px;
-    margin-top:-50px;
-    font-weight: 700;
-    cursor: pointer;
-}
-.postContent{
-    text-align: left;
-    font-size:14px;
-    line-height: 20px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient:vertical; 
-}
-.Submit{
-    position:absolute;
-    top:90px;
-    margin-left: 500px;
-    color:white;
-    background-color:#39A2DB;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 20px;
-    height: 50px;
-    width:150px;
-}
-.write{
-    padding-top:50px ;
-}
 
-.writeImg{
-    margin-left: 50px;
-    width:70vw;
-    height:250px;
-    border-radius:10px ;
-    object-fit: cover;
-}
-.writeForm{
-    position: relative;
-}
+/* Navbar */
 
-.writeFormGroup{
-    margin-left: 150px;
-      
-}
-
-/* .writeIcon{
-    width: 30px;
-    height:30px;
-    border-radius: 50%;
-    border: 1px solid;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    color:gray;
-    cursor:pointer ; 
-    
-} */
-
-.writeInput{
-    font-size: 30px;
-    border: none;
-    padding:20px;
-    width:70vw;
-    margin-right: 100px;
-    
-}
-.writeInput:focus{
-    outline:none;
-}
-
-.writeText{
-    font-size: 20px;
-    /* height:100vh; */
-   margin-left:150px;
-}
-.writeSubmit{
-    position:absolute;
-    top:200px;
-    color:white;
-    background-color: #39A2DB;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 20px;
-    height: 50px;
-    width:150px;
-}
 .NavbarItems{
-    /* background:linear-gradient(90deg, rgb(110,94,254)0%, rgba(73,63,252,1)100%); */
     background-color: #39A2DB;
     height:80px;
     display:flex;
@@ -129,12 +21,15 @@ body{
     font-size: 1.2rem;
 }
 
+.logo{
+    margin-left:10px;
+}
 
 .navbar-logo{
     color: #fff;
     justify-self: start;
-    margin-left: -100px;
     cursor:pointer;
+    font-family: 'Dancing Script';
 }
 
 .fa-react{
@@ -144,13 +39,14 @@ font-size:1.6rem;
 
 .nav-menu{
     display:grid;
-    grid-template-columns: repeat(5,auto);
+    grid-template-columns: repeat(3,auto);
     grid-gap:10px;
     list-style: none;
     text-align: center;
     width: 70vw;
     justify-content: end;
-    margin-right: 2rem;
+    margin-right: 50px;
+    margin-left: 170px;
     font-family: "Montserrat",sans-serif; 
     
 }
@@ -177,64 +73,145 @@ font-size:1.6rem;
 .menu-icon{
     display: none;
 }
+/* Home Page */
 
-/* @media screen and (max-width:960px){
-    .NavbarItems{
-        position:relative;
-    }
+.blogDisplay{
+    padding-left: 0;
+    width: 250px;
+    border: 0.5px;
+    float: left;
+    padding: 2%;
+    height: 200px;
+    text-decoration: none;
+    margin-left: auto;
 
-    .nav-menu{
-        display:flex;
-        flex-direction:column;
-        width:100%;
-        height:500px;
-        position:absolute;
-        top:80px;
-        left:-100%;
-        opacity:1;
-        transition: all 0.5s ease;
+}
 
-    }
+.post{
+    text-align: center;
+    padding-left: 0px;
+    margin: auto;
+    margin-left: 145px;
+}
+.postInfo{
+    padding-left: 0px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+}
+.postTitle{
+    text-align: left;
+    text-decoration: none;
+    font-family: "Montserrat",sans-serif;
+    font-size:24px;
+    font-weight: 600;
+    cursor: pointer;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient:vertical; 
+}
+.postContent{
+    
+    padding: 0px;
+    width: 100%;
+    text-align: left;
+    font-size:14px;
+    line-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient:vertical; 
+}
+.Submit{
+    position:absolute;
+    top:95px;
+    margin-left: 445px;
+    color:white;
+    background-color:#39A2DB;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    height: 50px;
+    width:150px;
+}
+.Submit:hover{
+    background-color: #3C8DAD;
+    border-radius:4px;
+    transition: all 0.2s ease-out;
+    border-radius: 10px;
+}
 
-    .nav-menu.active{
-        background-color:#6668f4;
-        left:0;
-        opacity:1;
-        transition:all 0.5s ease;
-        z-index:1;
-    }
+/* Add Blog */
 
-    .nav-links{
-        text-align:center;
-        padding: 2rem;
-        width:100%;
-    }
-    .nav-links:hover{
-        background-color: #7577fa;
-        border-radius: 0;
-    }
+.write{
+    padding-top:50px ;
+}
 
-    .navbar-logo{
-        position: relative;
-        top: 0;
-        left:0;
-        transform: translate(25%,50%);
+.writeImg{
+    margin-left: 50px;
+    width:70vw;
+    height:250px;
+    border-radius:10px ;
+    object-fit: cover;
+}
+.writeForm{
+    position: relative;
+}
 
-    }
-    .menu-icon{
-        display:block;
-        position: absolute;
-        top:0;
-        right:0;
-        transform: translate(-100%,60%);
-        font-size: 1.8rem;
-        cursor:pointer;
-    }
-} */
+.writeFormGroup{
+    margin-left: 150px;
+      
+}
+
+.writeInput{
+    font-size: 30px;
+    border: none;
+    padding:20px;
+    width:70vw;
+    margin-right: 100px;
+    
+}
+.writeInput:focus{
+    outline:none;
+}
+
+.writeText{
+    font-size: 20px;
+    margin-left:150px;
+}
+.writeSubmit{
+    position:absolute;
+    top:200px;
+    color:white;
+    background-color: #39A2DB;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    height: 50px;
+    width:150px;
+}
+.writeSubmit:hover{
+    background-color: #3C8DAD;
+    border-radius:4px;
+    transition: all 0.2s ease-out;
+    border-radius: 10px;
+}
+
 
 :root {
     --primary:#3acbf7;
 }
+ 
+/* Single Blog */
 
 .fullPostWrapper{
     padding:20px;
@@ -253,6 +230,8 @@ font-size:1.6rem;
     font-size: 18px;
     line-height: 30px;
     color: #666;
+    text-align: left;
+    padding: 70px;
     
  }
  .fullPostContent::first-letter{
@@ -260,9 +239,11 @@ font-size:1.6rem;
      font-size: 30px;
      font-weight: 600;
  }
+
+
  .backButton{
     position:absolute;
-    margin-left: -85px;
+    margin-left: -140px;
     color:white;
     background-color:#39A2DB;
     padding: 10px;
@@ -272,4 +253,40 @@ font-size:1.6rem;
     font-size: 20px;
     height: 50px;
     width:150px;
+}
+.backButton:hover{
+    background-color: #3C8DAD;
+    border-radius:4px;
+    transition: all 0.2s ease-out;
+    border-radius: 10px;
+}
+
+.deleteButton{
+    position:absolute;
+    margin-left: 40px;
+    color:white;
+    background-color:#39A2DB;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    height: 50px;
+    width:150px;
+}
+.deleteButton:hover{
+    background-color: #3C8DAD;
+    border-radius:4px;
+    transition: all 0.2s ease-out;
+    border-radius: 10px;
+}
+
+
+/* Links */
+
+.link {
+    color: #666;
+}
+.link:hover {
+    color: black;
 }
